# rust-template

./: .editorconfig  .gitignore  .prettierrc.yml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  justfile  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: main.rs
