# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
    authors = ["Paul Razvan Berg"]
    description = "A template for developing Rust projects, with sensible defaults"
    edition = "2021"
    homepage = "https://github.com/PaulRBerg/rust-template"
    license = "MIT"
    name = "rust-template"
    version = "0.1.0"

[dependencies]

    # The core APIs, including the Serialize and Deserialize traits. Always
    # required when using Serde. The "derive" feature is only required when
    # using #[derive(Serialize, Deserialize)] to make Serde work with structs
    # and enums defined in your crate.
    serde = { version = "1.0", features = ["derive"] }

    # Each data format lives in its own crate; the sample code below uses JSON
    # but you may be using a different one.
    serde_json = "1.0"
